<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>jasper</groupId>
		<artifactId>jasper-parent</artifactId>
		<version>1.3.0-SNAPSHOT</version>
	</parent>
	
	<artifactId>jasper-load-test</artifactId>
	<name>jasper-load-test</name>
	<description>Load testing for Jasper using Gatling</description>

	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.compiler.release>21</maven.compiler.release>
		<gatling-maven-plugin.version>4.20.4</gatling-maven-plugin.version>
		<gatling.version>3.14.4</gatling.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>io.gatling.highcharts</groupId>
			<artifactId>gatling-charts-highcharts</artifactId>
			<version>${gatling.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>io.gatling</groupId>
				<artifactId>gatling-maven-plugin</artifactId>
				<version>${gatling-maven-plugin.version}</version>
				<configuration>
					<jvmArgs>
						<jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
					</jvmArgs>
					<runMultipleSimulations>true</runMultipleSimulations>
					<includes>
						<include>simulations.jasper.*Simulation</include>
					</includes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>